# CPanel

./: .gitmodules  CMakeLists.txt  CPanelFlow.txt  FMM.h  README.md  cpCaseVP.cpp  cpCaseVP.h  panelTest.cpp  panelTest.h  particle.cpp  particle.h  particleFMM.cpp  particleFMM.h  secondBufferWake.cpp  secondBufferWake.h  vortexFil.cpp  vortexFilament.cpp  vortexFilament.h
CPanel/: CMakeLists.txt  CPanelMgr.cpp  CPanelMgr.h  VTUfile.cpp  VTUfile.h  bodyPanel.cpp  bodyPanel.h  bodyStreamline.cpp  bodyStreamline.h  chtlsnd.cpp  chtlsnd.h  convexHull.cpp  convexHull.h  cpCase.cpp  cpCase.h  cpCaseVP.cpp  cpCaseVP.h  cpFile.cpp  cpFile.h  cpNode.cpp  cpNode.h  cpanel.cpp  edge.cpp  edge.h  geometry.cpp  geometry.h  inputParams.cpp  inputParams.h  liftingSurf.cpp  liftingSurf.h  main.cpp  octreeFile.cpp  octreeFile.h  panel.cpp  panel.h  panelOctree.cpp  panelOctree.h  particle.cpp  particle.h  particleFMM.cpp  (+15 more)
CPanel.xcodeproj/: project.pbxproj
CPanel.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
CPanel.xcodeproj/project.xcworkspace/xcshareddata/: CPanel - Unstructured Panel Code copy.xccheckout
CPanelTests/: CMakeLists.txt  DoubVelData.h  cpCaseVP.cpp  cpCaseVP.h  geometryTests.cpp  geometryTests.h  geometry_test.cpp  influenceTests.cpp  influenceTests.h  influence_test.cpp  main.cpp  panelTest.cpp  panelTest.h
CPanel_BEM.xcodeproj/: project.pbxproj
CPanel_BEM.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
CPanel_BEM.xcodeproj/project.xcworkspace/xcshareddata/: CPanel_BEM.xccheckout
Connor Cases/0012AR100/: 0012AR100.CPin  0012AR100.bKin  0012AR100.tri  0012AR100.vsp3
Connor Cases/0012AR40/: 0012AR40.CPin  0012AR40.CPout  0012AR40.bKin  0012AR40.tri  README.txt
Connor Cases/0012AR40/V1_Mach0.1_alpha0_beta0/: bufferWake2Data-0.vtu  bufferWake2Data-1.vtu  bufferWake2Data-10.vtu  bufferWake2Data-100.vtu  bufferWake2Data-101.vtu  bufferWake2Data-102.vtu  bufferWake2Data-103.vtu  bufferWake2Data-104.vtu  bufferWake2Data-105.vtu  bufferWake2Data-106.vtu  bufferWake2Data-107.vtu  bufferWake2Data-108.vtu  bufferWake2Data-109.vtu  bufferWake2Data-11.vtu  bufferWake2Data-110.vtu  bufferWake2Data-111.vtu  bufferWake2Data-112.vtu  bufferWake2Data-113.vtu  bufferWake2Data-114.vtu  bufferWake2Data-115.vtu  bufferWake2Data-116.vtu  bufferWake2Data-117.vtu  bufferWake2Data-118.vtu  bufferWake2Data-119.vtu  bufferWake2Data-12.vtu  bufferWake2Data-120.vtu  bufferWake2Data-121.vtu  bufferWake2Data-122.vtu  bufferWake2Data-123.vtu  bufferWake2Data-124.vtu  bufferWake2Data-125.vtu  bufferWake2Data-126.vtu  bufferWake2Data-127.vtu  bufferWake2Data-128.vtu  bufferWake2Data-129.vtu  bufferWake2Data-13.vtu  bufferWake2Data-130.vtu  bufferWake2Data-131.vtu  bufferWake2Data-132.vtu  bufferWake2Data-133.vtu  (+273 more)
Connor Cases/4412/: 4412.CPin  4412.CPout  4412.tri
Connor Cases/4412/V1_Mach0.1_alpha5_beta0/: bufferWake2Data-0.vtu  spanwiseData_Wake1.csv  surfaceData-0.vtu  wakeData-0.vtu
Connor Cases/4412AR6/: 4412AR6.CPin  4412AR6.CPout  4412AR6.tri
Connor Cases/4412AR6/V1_Mach0.1_alpha5_beta0/: spanwiseData_Wake1.csv  surfaceData.vtu  wakeData.vtu
Connor Cases/4412FineNoWake/: 4412FineNoWake.CPout  4412FineNoWake.tri  4412FineNoWake_old.CPout  4412fineNoWake.CPin
Connor Cases/4412FineNoWake/V100_Mach0.1_alpha5_beta0/: bufferWake2Data-0.vtu  bufferWake2Data-1.vtu  bufferWake2Data-10.vtu  bufferWake2Data-11.vtu  bufferWake2Data-12.vtu  bufferWake2Data-13.vtu  bufferWake2Data-14.vtu  bufferWake2Data-15.vtu  bufferWake2Data-16.vtu  bufferWake2Data-17.vtu  bufferWake2Data-18.vtu  bufferWake2Data-19.vtu  bufferWake2Data-2.vtu  bufferWake2Data-20.vtu  bufferWake2Data-21.vtu  bufferWake2Data-22.vtu  bufferWake2Data-23.vtu  bufferWake2Data-24.vtu  bufferWake2Data-25.vtu  bufferWake2Data-26.vtu  bufferWake2Data-27.vtu  bufferWake2Data-28.vtu  bufferWake2Data-29.vtu  bufferWake2Data-3.vtu  bufferWake2Data-30.vtu  bufferWake2Data-4.vtu  bufferWake2Data-5.vtu  bufferWake2Data-6.vtu  bufferWake2Data-7.vtu  bufferWake2Data-8.vtu  bufferWake2Data-9.vtu  filaments-10.vtu  filaments-11.vtu  (+116 more)
Connor Cases/7336test/: 7336.CPin  7336.tri  7336even.CPout  7336odd.CPout
Connor Cases/HeysonRotorCoarse12deg/: HeysonRotorCoarse12deg.CPin  HeysonRotorCoarse12deg.bKin  HeysonRotorCoarse12deg.tri
Connor Cases/OctreeFiles/: ParticleOctree1.txt  ParticleOctree10.txt  ParticleOctree11.txt  ParticleOctree12.txt  ParticleOctree13.txt  ParticleOctree14.txt  ParticleOctree15.txt  ParticleOctree16.txt  ParticleOctree17.txt  ParticleOctree18.txt  ParticleOctree19.txt  ParticleOctree2.txt  ParticleOctree20.txt  ParticleOctree21.txt  ParticleOctree22.txt  ParticleOctree23.txt  ParticleOctree24.txt  ParticleOctree25.txt  ParticleOctree26.txt  ParticleOctree27.txt  ParticleOctree28.txt  ParticleOctree29.txt  ParticleOctree3.txt  ParticleOctree30.txt  ParticleOctree31.txt  ParticleOctree32.txt  ParticleOctree33.txt  ParticleOctree34.txt  ParticleOctree35.txt  ParticleOctree36.txt  ParticleOctree37.txt  ParticleOctree38.txt  ParticleOctree39.txt  ParticleOctree4.txt  ParticleOctree40.txt  ParticleOctree41.txt  ParticleOctree42.txt  ParticleOctree43.txt  ParticleOctree44.txt  ParticleOctree45.txt  (+64 more)
Connor Cases/bigWindTurbine/: bigWindTurbine.CPin  bigWindTurbine.bKin  bigWindTurbine.stp  bigWindTurbine.tri  bigWindTurbine.vsp3
Connor Cases/gridConv/: wing.tri  wing.vsp3
Connor Cases/highRes0012/: highRes0012.CPin
Connor Cases/highRes0012check/: highRes0012check.CPin  highRes0012check.bKin  highRes0012check.tri
Connor Cases/steadyTest/: steadyTest.CPin  steadyTest.CPout  steadyTest.tri
Connor Cases/threeElementWing/: threeElementWing.CPin  threeElementWing.CPout  threeElementWing.tri
Connor Cases/unsteadyTest/: unsteadyTest.CPin  unsteadyTest.CPout  unsteadyTest.tri
Octree/: node.h  octree.h
examples/4412_2ft_Span/: 4412_2ftSpan.tri  4412_2ft_Span.CPin
octree/: CMakeLists.txt
octree/examples/: main.cpp
octree/include/: member.h  node.h  octree.h
octree/tests/: CMakeLists.txt  NodeTests.cpp  NodeTests.h  OctreeTests.cpp  OctreeTests.h  octree_test.cpp  testObj.h  testOctreeClass.cpp
(+2248 files in other folders)
